[gd_scene load_steps=4 format=3 uid="uid://dliirkgxufnts"]

[ext_resource type="Script" path="res://src/gui/gui.gd" id="1_ku4oh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8ki6"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d10u8"]
font_size = 30

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_ku4oh")

[node name="LosePanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -104.0
offset_right = 185.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h8ki6")

[node name="MarginContainer" type="MarginContainer" parent="LosePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LosePanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Message" type="Label" parent="LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Lose!"
label_settings = SubResource("LabelSettings_d10u8")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="WinPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -104.0
offset_right = 185.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h8ki6")

[node name="MarginContainer" type="MarginContainer" parent="WinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="WinPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Message" type="Label" parent="WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Win!"
label_settings = SubResource("LabelSettings_d10u8")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="LosePanel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinPanel/MarginContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
